--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "google-books-search": "^0.3.1",
+    "mem": "^5.1.1",
     "moment": "^2.24.0",
     "moviedb": "^0.2.10",
     "vue": "^2.5.2",
@@ -71,7 +72,7 @@
     "vuetify-loader": "^1.0.5",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^3.4.1",
-    "webpack-dev-server": "^2.9.1",
+    "webpack-dev-server": "^2.11.5",
     "webpack-merge": "^4.1.0"
   },
   "browserslist": [
